package.json homepage amplify

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gabmora.github.io/coolingkings",
+  "homepage": "https://gh-pages.d15a6dqr6ig73.amplifyapp.com",
   "name": "coolingkingshvac",
   "version": "0.1.0",
   "private": true,
