ai agent scheduler

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^6.1.1",
     "mdb-react-ui-kit": "^7.0.0",
+    "openai": "^5.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.25.0",
