--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@supabase/supabase-js": "^2.49.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,8 +16,10 @@
     "emailjs-com": "^3.2.0",
     "gh-pages": "^6.1.1",
     "mdb-react-ui-kit": "^7.0.0",
+    "moment": "^2.30.1",
     "openai": "^5.1.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.2",
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
